fixed overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: helvetica;
     color: white;
+    overflow-x: hidden;
 }
 
 body {
